--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "bootstrap": "^4.5.0",
     "cra-template": "1.0.3",
     "fontsource-roboto": "^2.2.6",
+    "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.1",
-    "react-week-calendar": "^0.1.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3"
