--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,9 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
+      - name: ⬇️ Checkout code
+        uses: actions/checkout@v4
+        
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
         with:
