--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "calendar-scheduling-ui",
+  "name": "scheduling-ui",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/calendar-scheduling-ui",
+  "homepage": "/scheduling-ui",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
